--- a/project.inlang/settings.json
+++ b/project.inlang/settings.json
@@ -5,8 +5,8 @@
 		"https://cdn.jsdelivr.net/npm/@inlang/plugin-m-function-matcher@2/dist/index.js"
 	],
 	"plugin.inlang.messageFormat": {
-		"pathPattern": "./messages/{locale}.json"
+		"pathPattern": "../messages/{locale}.json"
 	},
 	"baseLocale": "en",
-	"locales": ["en", "es"]
+	"locales": ["en", "es", "hi"]
 }
